dml.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dml
  namespace: ucsd-digital-media-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dml
  template:
    metadata:
      labels:
        app: dml
    spec:
      nodeSelector:
        kubernetes.io/hostname: prp-gpu-6.t2.ucsd.edu
      tolerations: 
        - key: nautilus.io/suncave
          effect: NoSchedule
          operator: Exists
        - key: nautilus.io/large-gpu
          effect: NoSchedule
          operator: Equal
          value: "true"
      hostname: dml
      priorityClassName: owner
      containers:
      - name: dml
        image: gitlab-registry.nrp-nautilus.io/ar-noc/docker-nvidia-glx-desktop
#        imagePullPolicy: Always
        stdin: true
        tty: true
        ports:
          - containerPort: 5901
            protocol: TCP
        resources:
          limits:
            memory: 64Gi
            cpu: "2"
            nvidia.com/gpu: 1
            smarter-devices/tty63: 1
          requests:
            memory: 64Gi
            cpu: "2"
            nvidia.com/gpu: 1
            smarter-devices/tty63: 1
        volumeMounts:
        - mountPath: /cache
          name: dml-cache-vol
        - mountPath: /home/user
          name: dml-root-vol
        - mountPath: /sw
          name: dml-sw-vol
        - mountPath: /dev/shm
          name: dshm
      restartPolicy: Never
      volumes:
        - name: dml-cache-vol
          persistentVolumeClaim:
            claimName: dml-cache-vol
        - name: dml-root-vol
          persistentVolumeClaim:
            claimName: dml-root-vol
        - name: dml-sw-vol
          persistentVolumeClaim:
            claimName: dml-sw-vol
        - name: dshm
          emptyDir:
            medium: Memory
