dml2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dml2
  namespace: ucsd-digital-media-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dml2
  template:
    metadata:
      labels:
        app: dml2
    spec:
      nodeSelector:
#       kubectl get nodes --show-labels | grep smarter
#       kubernetes.io/hostname: osg-houston-stashcache.nrp.internet2.edu
        kubernetes.io/hostname: clu-fiona2.ucmerced.edu
      tolerations: 
        - key: nautilus.io/suncave
          effect: NoSchedule
          operator: Exists
        - key: nautilus.io/large-gpu
          effect: NoSchedule
          operator: Equal
          value: "true"
      hostname: dml2
      priorityClassName: owner
      containers:
      - name: dml2
        image: gitlab-registry.nrp-nautilus.io/nhieubrian/novnc-digital-media-lab:latest
#        imagePullPolicy: Always
        stdin: true
        tty: true
        ports:
          - containerPort: 5901
            protocol: TCP
        resources:
          # lowest amount of resources that we want. MAX: 1 GPU
          limits:
            memory: 16Gi
            cpu: "6"
            nvidia.com/gpu: 1
            smarter-devices/tty63: 1
          # If possible, grab up to this much
          requests:
            memory: 16Gi
            cpu: "6"
            nvidia.com/gpu: 1
            smarter-devices/tty63: 1
        volumeMounts:
          # If any changes are made to the yaml, these names will also change
        - mountPath: /cache
          name: dml2-cache-vol
          # ^ Not the file name, but what is defined inside.
        - mountPath: /home/user
          name: dml-root-vol
        - mountPath: /home/user/Desktop/seaweed
          name: dml-sw-vol
        - mountPath: /dev/shm
          name: dshm
      volumes:
        - name: dml2-cache-vol
          persistentVolumeClaim:
            claimName: dml2-cache-vol
        - name: dml-root-vol
          persistentVolumeClaim:
            claimName: dml-root-vol
        - name: dml-sw-vol
          persistentVolumeClaim:
            claimName: dml-sw-vol
        - name: dshm
          emptyDir:
            medium: Memory
