apache2-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache2-deployment
  namespace: ucsd-digital-media-lab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apache2
  template:
    metadata:
      labels:
        app: apache2
    spec:
      nodeSelector:
        kubernetes.io/hostname: clu-fiona2.ucmerced.edu
      containers:
      - name: apache2
        image: ubuntu/apache2:latest
        volumeMounts:
        - name: apache2-config-volume
          mountPath: /etc/apache2/apache2.conf
          subPath: apache2.conf
        - name: apache2-config-volume
          mountPath: /srv/www/index.html
          subPath: index.html
        ports:
        - containerPort: 80
          name: apache2
          protocol: TCP
        resources:
          limits:
            memory: 4Gi
            cpu: 2
          requests:
            memory: 4Gi
            cpu: 2
      volumes:
        - name: apache2-config-volume
          configMap:
            name: apache2-config
            items:
            - key: apache2
              path: apache2.conf
            - key: apache2-site
              path: index.html
---
apiVersion: v1
kind: Service
metadata:
  name: apache2-service
spec:
  selector:
    app: apache2
  ports:
  - protocol: TCP
    port: 80
    name: apache
