dml2-ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dml2
  namespace: ucsd-digital-media-lab
  labels:
    app: dml2
spec:
  selector:
    app: dml2
  ports:
  - name: dml2
    protocol: TCP
    port: 5901
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dml2-ingress
  namespace: ucsd-digital-media-lab
  annotations:
    traefik.ingress.kubernetes.io/router.tls: ""
spec:
  rules:
  - host: dml2.nrp-nautilus.io
    http:
      paths:
      - backend:
          serviceName: dml2
          servicePort: 5901
